# Dasi

./: .cursorrules  .gitignore  .windsurfrules  Getting Started Guide.md  LANGGRAPH_MIGRATION.md  README.md  build.sh  create_appimage.sh  dasi.spec  install.py  installer.py  main.py  pyproject.toml  requirements-uv.txt  requirements.txt  tasks.py  uninstall.py  uninstall.sh
.cursor/rules/: 01-project-overview.mdc  02-architecture.mdc  03-ui-system.mdc  04-llm-integration.mdc  05-development-guide.mdc  06-tools-system.mdc  07-tool-creation-template.mdc  08-popup-ui-system.mdc  09-popup-components.mdc  09-settings-system.mdc
defaults/prompt_chunks/: agent_prompt.md  code_assistant.md  create_5_sentence_summary.md  explain_concept.md  generate_notes.md  haiku_master.md  humanize.md  shell_command.md  summarize_text.md  text_editor.md
defaults/tools/: terminal_tool_config.json  web_search_tool_config.json
docs/: README.md  graph.md  multimodal.md
scripts/: create_appimage.sh  installer.py
src/: README_LANGGRAPH.md  cache_manager.py  constants.py  hotkey_listener.py  image_handler.py  instance_manager.py  langgraph_handler.py  llm_handler.py  llm_integration.py  main.py  migrate_to_langgraph.py  ui.py  vision_handler.py  web_search_handler.py  web_search_handler.py.bak
src/core/: filename_suggester.py  graph_builder.py  instance_manager.py  langgraph_handler.py  langgraph_nodes.py  llm_factory.py  prompts_hub.py  response_generation.py  vision_handler.py  web_search_handler.py
src/ui/: __init__.py  popup_window.py  response_preview.py  settings_window.py  ui.py
(+62 files in other folders)
